Closed
Bug 866411
Opened 13 years ago
Closed 2 years ago
When reinserted into the DOM, an element is rendered without animation effects on first frame
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
120 Branch
| Tracking | Status | |
|---|---|---|
| firefox120 | --- | fixed |
People
(Reporter: 0mechelk+mozilla, Assigned: longsonr, NeedInfo)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0
Build ID: 20130409194949
Steps to reproduce:
The problem is illustrated in this jsfiddle:
http://jsfiddle.net/8bDMS/9/
Actual results:
When an element with an active animation is reinserted into the DOM by appendChild, the animation effect is not shown on at least the first frame. This causes a very noticeable flicker.
Expected results:
The animation effect should be applied to the element before it is drawn on the screen.
Updated•10 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(hiikezoe)
Updated•10 years ago
|
Flags: needinfo?(hiikezoe)
Updated•3 years ago
|
Severity: normal → S3
| Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•2 years ago
|
||
| Assignee | ||
Comment 5•2 years ago
|
||
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/954b734084c2
copy animation effects when cloning a use element r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/42182 for changes under testing/web-platform/tests
| Assignee | ||
Updated•2 years ago
|
Comment 8•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox120:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
Upstream PR merged by moz-wptsync-bot
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•