Bug 866411 - copy animation effects when cloning a use element r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D188886